Fix code overflow
I feel like this goes back and forth between "hidden" and "scroll".
Or maybe I'm just crazy.

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -157,7 +157,7 @@ body {
 				line-height: 1.5;
 				white-space: pre;
 				word-wrap: normal;
-				overflow: scroll;
+				overflow: hidden;
 
 				&:hover {
 					width: auto;
